# GunVision

./: .gitignore  README.md  TODO.md  model2ONNX.py  pyproject.toml  requirements.txt  training.ipynb
app/: app.py  styles.css
notebooks/: modelCompare.qmd  training.ipynb
src/: app.py  model2ONNX.py
