[project]
name = "weaponvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.23.2",
    "onnxslim>=0.1.80",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "tabulate>=0.9.0",
    "ultralytics>=8.3.241",
]
